--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-            <div class="introduction">
-                <h1>BINAMIN</h1>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem magni, nostrum perferendis labore dolor architecto error laudantium, possimus eveniet reprehenderit repellat quidem! Vitae dolorem, magnam accusamus impedit eaque tempore! Distinctio.
+        <div class="container-fluid">
+            <div class="row">
+                <div id="column1" class="col-md-12">
+
+                </div>
             </div>
         </div>
     <script src="js/script.js"></script>
 </body>
 </html>
+
+
+
+
+
+<!-- <div class="bg-image" style="background-image: url('./images/ghana.jpeg'); height:50vh; opacity:  ;">
+    <h1>BINAMIN</h1>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem magni, nostrum perferendis labore dolor architecto error laudantium, possimus eveniet reprehenderit repellat quidem! Vitae dolorem, magnam accusamus impedit eaque tempore! Distinctio.
+</div> -->
