added div class container to hold the elements

--- a/index.html
+++ b/index.html
@@ -5,17 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AKAN NAMES</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div id="column1" class="col-md-12">
-
-                </div>
+    <div id="container1" class="container-fluid">
+        <div id="row1" class="row">
+            <div id="column1" class="col-md-6">
+                <h1 class="h-one">AKAN NAMES</h1>
+                <p>
+                    Akan names come from a traditional
+                     naming system for people from countries such as Togo,
+                      Ivory Coast and Ghana. A child's name is determined 
+                      by factors surrounding his or her birth. For example,
+                       the day of their birth or the manner in which they 
+                       were born may determine which name they get.
+                </p>
+                <p>
+                    This web app gives you the ability to know the 
+                    exact day of the week you were born.
+                    All that after in-depth research and trials.
+                </p> 
+                <p>
+                    "I AM NOT AN AFRICAN BECAUSE I WAS RAISED IN AFRICA. I AM AN AFRICAN BECAUSE AFRICA WAS BORN IN ME"
+                            <H4>KWAME NKURUMA</H4>
+                </p>      
+                <H2>AFRICA</H2>
             </div>
+            <div class="col-md-6">
+                <img class="img1" src="./images/Ghanaian_Princess-removebg-preview.png" alt="">
         </div>
+        <div class="row">
+            <form action="">
+                
+            </form>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 </html>
