made changes to the js.file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <label for="male">Male</label><br>
                             <input type="radio" id="female" name="gender" value="female">
                             <label for="female">Female</label><br>
-                            <button id="submit" onclick="selectDay" class=""><strong>SUBMIT</strong></button>
+                            <button id="submit" onclick="selectDay()" class=""><strong>SUBMIT</strong></button>
                         </form>
                     </div>
             
