made changes to the function

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
                 <div class="row">
                     <div  class="col-md-12">
                         <H3>DETAILS</H3>
-                        <form action="">
+                        <form >
                             <label for="fname">DATE OF BIRTH:</label><br>
                             <input type="date" id="D.O.B" name="D.O.B"><br>
                             <input type="radio" id="male" name="gender" value="male">
                             <label for="male">Male</label><br>
                             <input type="radio" id="female" name="gender" value="female">
                             <label for="female">Female</label><br>
-                            <button id="submit" onclick="selectDay()" class=""><strong>SUBMIT</strong></button>
+                            <button id="submit" type="button" onclick="selectDay()" class=""><strong>SUBMIT</strong></button>
                         </form>
                     </div>
             
@@ -66,24 +66,3 @@
 
 
 
-<!-- <div class="bg-image" style="background-image: url('./images/ghana.jpeg'); height:50vh; opacity:  ;">
-    <h1>BINAMIN</h1>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem magni, nostrum perferendis labore dolor architecto error laudantium, possimus eveniet reprehenderit repellat quidem! Vitae dolorem, magnam accusamus impedit eaque tempore! Distinctio.
-</div> -->
-
-<!-- <div class="container-fluid">
-    <div class="row">
-        <div  class="col-md-12">
-            <H3>DETAILS</H3>
-            <form action="">
-                <label for="fname">DATE OF BIRTH:</label><br>
-                <input type="date" id="D.O.B" name="D.O.B"><br>
-                <input type="radio" id="male" name="gender" value="male">
-                <label for="male">Male</label><br>
-                <input type="radio" id="female" name="gender" value="female">
-                <label for="female">Female</label><br>
-                <button><strong>SUBMIT</strong></button>
-            </form>
-        </div>
-
-</div> -->
